# lighthouse

./: .gitattributes  2.txt  Cargo.toml  Dockerfile  Makefile  README.md  block.ssz  pr-1.txt  state.ssz
.github/workflows/: local-testnet.yml  release.yml  test-suite.yml  transition-blocks.yml
beacon_node/beacon_chain/: Cargo.toml
beacon_node/beacon_chain/benches/: benches.rs
beacon_node/beacon_chain/src/: beacon_chain.rs  beacon_fork_choice_store.rs  blob_verification.rs  block_verification.rs  block_verification_types.rs  builder.rs  data_availability_checker.rs  fetch_blobs.rs  fork_choice_dump_reader.rs  kzg_utils.rs  lib.rs  (+2 more)
beacon_node/execution_layer/: Cargo.toml
beacon_node/lighthouse_network/: Cargo.toml
book/src/: api-lighthouse.md
consensus/fork_choice/: Cargo.toml
lcli/src/: new_testnet.rs
light_client/: Cargo.toml  README.md
light_client/src/: cli.rs  config.rs  data_provider.rs  lib.rs  light_client.rs  light_client_sync_service.rs  store.rs  types.rs
lighthouse/: Cargo.toml
lighthouse/src/: main.rs
scripts/libp2p_traffic_dump/: README.md  config.yaml  libp2p_traffic_dump.sh  watch-libp2p-traffic.sh
scripts/local_testnet/: README.md  beacon_node.sh  entrypoint.sh  network_params_das_local.yaml  network_params_das_local_new_peer.yaml  start_local_testnet.sh  test_16_blobs.yaml  test_16_blobs_large.yaml  test_16_blobs_small.yaml  test_32_blobs.yaml  validator_client.sh
testing/ef_tests/: Cargo.toml
validator_client/: Cargo.toml
validator_client/src/: beacon_node_fallback.rs  block_service.rs  lib.rs  validator_store.rs
(+64 files in other folders)
