[package]
name = "light_client"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "light_client"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.51"
clap = { workspace = true }
clap_utils = { workspace = true }
directory =  { workspace = true }
environment = { workspace = true }
eth2 = { workspace = true }
execution_layer = { workspace = true }
sensitive_url = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
slot_clock = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
